-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: OpenJDK6
-
Component/s: client-libs
-
None
-
b40
A change to imageioJPEG.c is lost in the gap between the first OpenJDK 6 tarball and the initial OpenJDK repositories. The change is there in the initial revision of both OpenJDK 6 & 7, but 6755277 (a replica of the OpenJDK 6 b00 tarball) reverts it.
We re-apply the change so that the 6 version is in line with 7 and 7 backports then apply cleanly.
We re-apply the change so that the 6 version is in line with 7 and 7 backports then apply cleanly.
- relates to
-
JDK-6755277 All initial changes to jdk7 to create openjdk 6 build 0
-
- Resolved
-