8162828: Sync imageioJPEG.c with initial OpenJDK 7 version Reviewed-by: omajid